config/etc/iptables-firewall-rules
*filter

#  Allow all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 -j REJECT

#  Accept all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#  Allow all outbound traffic - you can modify this to only allow certain traffic
-A OUTPUT -j ACCEPT

# Allowing these:
# HTTP
-A INPUT -p tcp --dport 80 -j ACCEPT
# HTTPS
-A INPUT -p tcp --dport 443 -j ACCEPT
# Monitorix
-A INPUT -p tcp --dport 6669 -j ACCEPT
# MySQL server (LAN only)
-A INPUT -s 192.168.1.0/24 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT


# Deluge
-A INPUT -p tcp --dport 3358 -j ACCEPT
-A INPUT -p tcp --dport 58846 -j ACCEPT
-A INPUT -p tcp --dport 56841:56870 -j ACCEPT
-A INPUT -p udp --dport 56841:56870 -j ACCEPT
-A OUTPUT -p tcp --sport 56871:56899 -j ACCEPT
-A OUTPUT -p udp --sport 56871:56899 -j ACCEPT

# SSH Connections
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

# DNS server
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 53 -j ACCEPT

# Samba
-A INPUT -p udp -m udp --dport 137 -j ACCEPT
-A INPUT -p udp -m udp --dport 138 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 445 -j ACCEPT


#  Allow ping
-A INPUT -p icmp -j ACCEPT

#  Log iptables denied calls
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "denied: " --log-level 7

#  Drop all other inbound - default deny unless explicitly allowed policy
-A INPUT -j DROP
-A FORWARD -j DROP

COMMIT
